# emp-app

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: build_site.py
src/app/: main.py
tests/: test_build_site.py  test_main.py
